src/_webapp/css/toyundamugen.css
/* css admin3 */
html {
	height: 100%;
}
body {
	background-color: #1E2124;
	color: #eee;
	height: 100%;
	margin: 0;
}

.form-control {
	background-color: #f3f3f3;
}

.btn-default {
	background-color: #e8e8e8;
}

.header {
	position: fixed;
	z-index: 1337;
	background-color: #1E2124;
	top: 0;
	height: 85px;
	width: 100%;
	border-bottom: 1px solid #9e9e9e;
}

.header button {
	height: 100%;
	width: 85px;
	padding: 0px;
	margin: 0px;
	font-size: 2rem;
}

.header > .btn-group, .header img {
	height: 100%
}

#progressBar {
	cursor: pointer;
	height: 24px;
	width: 100%;
	top: 85px;
	position: fixed;
	z-index: 1337;
	border-bottom: solid 1px #9e9e9e;
	background-color: #1E2124;
}
#progressBarColor {
	background-color: #337ab7;
	z-index: 9;
	height: 100%;
    position: absolute;
	top: 0;
}
#progressBar:hover > #progressBarColor {
	background-color: #286faa;
}
#progressBar:active > #progressBarColor {
	background-color: #18617a;
}
#karaInfo {
    line-height: 1.83;
	text-align: center;
	z-index: 10;
    position: absolute;
    top: 0;
	width: 100%;
	font-weight: 600;
}
.btn-primary {
	background-color: #37679a;
}
.btn-danger {
	background-color: #973b3b;
	border-color: transparent;
}
.btn-danger:hover {
	background-color: #994240;
	border-color: #994240;
}

.btn-danger:focus:active {
	background-color: #893230;
	border-color: #893230;
}

.underHeader {
  position: relative;	
  top: 75px;
}

.playlist-main {
  padding: 7px;
}

.panel {
	border: 7px solid #1E2124;
    background-color: #2d2d2f;
    margin: 0px;
	padding: 0px;
	z-index: 0;
}

.panel-heading > div {
	padding: 2px;
}
.panel-heading {
	border-bottom: 15px solid #1E2124;
	padding: 10px 10px;
}

.bootstrap-switch-large:hover, .bootstrap-switch-large:active:hover, .bootstrap-switch-large:focus, .bootstrap-switch-large:visited {
	background-color: #9e9e9e;
}

.bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-primary {
	background-color: #f4f4f4;
	color: #1E2124;
	border-color: #9e9e9e;
}
.bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-secondary:hover {
	background-color: #373737;
	color: white;
	border-color: #9e9e9e;
}

.bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-primary:hover {
	background-color: #f4f4f4;
	color: #1E2124;;
	border-color: #9e9e9e;
}

.bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-secondary{
	background-color: #1E2124;
	color: white;
}

.bootstrap-switch .bootstrap-switch-label {
	background-color: #9e9e9e; ;
}
div.bootstrap-switch-container {
    height: 100%;
	border-right: 1px solid #eee;
}

.bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-primary, .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-secondary {
	line-height: 2.2;
}

.btn, .bootstrap-switch, .bootstrap-switch-secondary, .bootstrap-switch-container > span  {
	border-radius: 0px !important;
}

.btn-dark, .btn-dark:focus {
	background-color: #1E2124;
	border: 0px solid #9e9e9e;
	border-left-width: 2px;
	color: white;
}
.btn-dark:hover {
	background-color: #292929;
	color: white;
}
.btn-dark:active:focus{
	background-color: #444;
	color: white;
}

select.form-control {
	width: 100% !important;
}

.list-group-item:focus {
	background-color : #5b5e54;
}
.list-group-item,.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
	background-color: #3b3e44;
	border-color: #9e9e9e;
	overflow: auto;
	padding: 0px;
	_min-height: calc(30px + 19px - 1vw);
	line-height: 3rem;
}
.playlist-main li.list-group-item[currentlyPlaying] {
	background-color: #3a5064;
	border-color: #9e9e9e;
}
.playlist-main .list-group-item.liType {
	background-color: #607e97;
	padding-left: 20px;
	min-height: 20px;
	line-height: 24px;
}
.list-group-item.liTag {
	min-height: auto;
	__line-height: 36px;
}

.playlist-main .list-group-item[user] {
	background-color: hsla(293, 9%, 27%, 1);
}

.list-group-item.liTag > .btnDiv {
	padding: 0;
}
.list-group-item.liTag > div {
	padding-top:0;
	padding-bottom:0;
}

.list-group-item.dragged {
	border: none;
	z-index: 200;
	position: absolute;
	width: auto;
	background-color: #222 !important;
}
.list-group-item.dragged > div{
	border: 1px solid #9e9e9e;
	width: auto;
	background-color: #222;
}

.list-group-item > div {
	padding: 3px;
}

.playlistContainer > ul[num="2"] .list-group-item > .infoDiv > button, .playlistContainer > ul[num="1"] .list-group-item > .btnDiv > button, .playlistContainer > ul[num="2"] .list-group-item .dragHandle {
	float: right;
	display: block;
}

.playlistContainer > ul[num="1"] .list-group-item > .infoDiv > button, .playlistContainer > ul[num="2"] .list-group-item > .btnDiv > button, .playlistContainer > ul[num="2"] .list-group-item .dragHandle  {
	float: left;
	display: block;
}
.list-group-item > .btnDiv > button {
	z-index: 52;
	position: relative;
}

.list-group-item.dragged .dragHandle {
	margin-left: 0px;
	margin-top:3px;
	float: right;
	padding: 0px;
}
.list-group-item .dragHandle {
	height: 100%;
	margin-left: 6px;
    font-size: 2rem;
	cursor: -webkit-grab;
	float: right;
}


.btn-action {
    border: 1px solid #9e9e9e;
	background-color: #393939;
	color: white;
	display: inline-block;
}
.btn-action.btn-sm {
	__width: calc(30px + 19px - 1vw);
	__height: calc(30px + 19px - 1vw);
}
.btn-action.deleteCriteria {
    border: 1px solid #9e9e9e;
	background-color: #393939;
	width: auto;
	height: auto;
	color: white;
	display: inline-block;
}

.btn-action:hover, .btn-action:focus {
	background-color: #292929;
	color: white;
}

.btn-action:active:focus{
	background-color: #444;
	color: white;
}

.playKara {
	__border-color: transparent;
}

.playKara:hover {
	background-color: #286090;
}

 .detailsKara, .lyricsKara {
	min-height: 56px;
	padding: 10px;
	margin: 7px;
	color: #cee1ea;
    background-color: #30393e;
    border-color: #8aa9af;
	border-radius: 0px;
	position: relative;
}
.detailsKara tr > td:first-child {
	font-weight: bold;
	padding-right: 7px;
}
/* ... */

